--- a/src/styles/flipCard.css
+++ b/src/styles/flipCard.css
@@ -1,12 +1,9 @@
 .flipcard{
-    width: 25rem;
-    height: 30rem;
+    width: 50%;
+    height: clamp(20rem, 70vw,25rem);
     position: relative;
     overflow: hidden;
     border-style:none;
-/*     
-    border: solid 1px black;
-    */
 }
 
 
@@ -28,7 +25,7 @@ img{
     opacity: 0;
     top: 0;
     width: 100%;
-    height: 100%;
+    height: clamp(20rem, 70vw,30rem);
     padding: 1.5rem;
     background-color: rgba(0,0,0,0.65);
     color: white;
@@ -42,7 +39,7 @@ img{
 .flipcard-info h1{
     position: absolute;
     top: 1.5rem;
-    width: 18rem;
+    width: clamp(10rem, 50vw,18rem);
     color: #FF006B;
 }
 
@@ -81,7 +78,7 @@ img{
     top: -1.5rem;
     right: -6rem;
     background-color: #FF006B;
-    z-index: 10;
+    z-index: 5;
 }
 
 
