--- a/src/styles/flipCard.css
+++ b/src/styles/flipCard.css
@@ -1,16 +1,24 @@
+
+
 .flipcard{
+    --card-height: clamp(30rem,50vw,40rem);
     width: 50%;
-    height: clamp(20rem, 70vw,25rem);
+    height: var(--card-height);
     position: relative;
     overflow: hidden;
     border-style:none;
 }
 
+@media (max-width: 600px) {
+    .flipcard{
+        width: 100%;
+    }
+}
 
 
 img{
     width: 100%;
-    height: 100%;
+    height: var(--card-height);
     object-fit: cover;
     transform: scale(1.01);
     transition: transform 1s ease;
@@ -25,8 +33,8 @@ img{
     opacity: 0;
     top: 0;
     width: 100%;
-    height: clamp(20rem, 70vw,30rem);
-    padding: 1.5rem;
+    height: var(--card-height);
+    
     background-color: rgba(0,0,0,0.65);
     color: white;
     transition: all 0.5s ease;
@@ -39,44 +47,48 @@ img{
 .flipcard-info h1{
     position: absolute;
     top: 1.5rem;
-    width: clamp(10rem, 50vw,18rem);
+    left: 1.5rem;
+    width: calc(100% - 7rem);
     color: #FF006B;
 }
 
 .flipcard-info p{
-    width: 20rem;
+    width: clamp(5rem,70%,70%);
     height: 15rem;
     font-size: 1.3rem;
     position: absolute;
+    padding-top: 1rem;
     top: 7rem;
-    width: 22rem;
-    
+    left: 1.5rem;
 }
 
 .flipcard-info h2{
     position: absolute;
     bottom: 4rem;
     color: #FF006B;
-    padding-top: 1rem;
+    padding-top: 0.5rem;
     font-weight: 500;
+    left:1.5rem;
 }
+
 .flipcard-info h2:after{
     position: absolute;
     content: " ";
-    top: 0;
-    left: 0;
     width: 5rem;
     height: 0.3rem;
+    left: 0;
+    top: -0.1rem;
     background-color: #FF006B;
 }
-.flipcard h1::before{
+
+.flipcard-info::before{
     position: absolute;
     display: block;
     content: " ";
-    width: 5rem;
+    width: clamp(2rem,20%,5rem);
     height: 7rem;
-    top: -1.5rem;
-    right: -6rem;
+    top: 0;
+    right: 0;
     background-color: #FF006B;
     z-index: 5;
 }
