--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,10 +1,49 @@
 .about-container{
     position: relative;
     height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: white;
 }
 
 .about-info{
     padding: 3rem;
     text-align: center;
+}
+
+.about-content{
+    width: 80%;
+    display: flex;
+    position: relative;
+    justify-content: center;
+ 
+}
+
+.about-profile{
+    width: 50%;
+}
+
+.hobbies{
+    width: 50%;
+}
+
+.about-heading{
+    font-size: 1.7rem;
+}
+
+.about-subhead{
+    margin: 1rem 0;
+    font-size: 1.3rem;
+}
+
+.about-thinhead{
+    font-weight: 300;
+    font-size: 1.3rem;
+    margin: 0;
+}
+
+.about-intro{
+    width: 80%;
+    margin-bottom: 3rem;
 }
