--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -49,7 +49,6 @@
     display: flex;
     position: relative;
     justify-content: center;
- 
 }
 
 .about-profile{
@@ -117,7 +116,12 @@
 }
 
 @media (max-width: 768px) {
-    
+    .about-para{
+        width: 100%;
+    }
+    .about-content{
+        width: 100%;
+    }
     .about-info-pic{
         flex-direction: column;
         align-items: center;
@@ -132,11 +136,11 @@
         align-items: center;
     }
     .about-profile{
-        width: 100%;
+        width: 80%;
     }
 
     .hobbies{
-        width: 100%;
+        width: 80%;
     }
 
     .about-buttons{
@@ -147,5 +151,8 @@
         margin: 1rem;
     }
 
+    .about-info img{
+        margin: 0 0 1rem 0;
+    }
 
 }
