--- a/src/styles/portfolio.css
+++ b/src/styles/portfolio.css
@@ -21,6 +21,13 @@
     width: 50%;
 }
 
+.fetch-message{
+    width: 100%;
+    text-align: center;
+    font-weight: 300;
+    position:relative;
+    top: -2rem;
+}
 
 @media (max-width: 768px) {
     .flipcard-container{
