--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -2,4 +2,75 @@
     position: relative;
     height: 100vh;
     background-color: #1c1c1c;
+    color: white;
+}
+
+.contact-info{
+    padding-top: 3rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.contact-input{
+    position: relative;
+    margin: 0 10%;
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+
+    justify-content: center;
+}
+
+.input-field{
+    height: 1.5rem;
+    border: none;
+    font-size: 1.1rem;
+    caret-color: red;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-bottom-color: white;
+    color:white;
+    background-color: transparent;
+    padding: 1rem;
+    margin: 1.2rem 0;
+    transition: border-bottom-color 1s;
+}
+
+.input-field:focus{
+    outline: none;
+    border-bottom-color: #FF006B;
+}
+
+.input-message{
+    font-size: 1.1rem;
+    border: none;
+    caret-color: red;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-bottom-color: white;
+    color:white;
+    background-color: transparent;
+    padding: 1rem;
+    margin: 1.2rem 0;
+    transition: border-bottom-color 1s;
+}
+
+.input-message:focus{
+    outline: none;
+    border-bottom-color: #FF006B;
+}
+
+.submit-button{
+    font-weight: 700;
+    width: 100%;
+    
+    padding: 1.5rem 0;
+    background-color: #FF006B;
+    transition: background-color 0.5s;
+}
+
+.submit-button:hover{
+    background-color: #c40052;
 }
