--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -37,13 +37,14 @@
 }
 
 .explore-button{
+    width:9rem;
     border-style: solid;
     border-width: 1px;
     border-color: white;
     border-radius: 0.2rem;
     margin-top: 1rem;
     font-size: 1.2rem;
-    padding: 0.75rem;
+    padding: 1rem;
     cursor: pointer;
     color: white;
     transition: all .5s;
