--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,5 +1,28 @@
 .footer-container{
     position: relative;
-    height: 30vh;
+    display: flex;
+    width: 50%;
+    justify-content: space-between;
+    color: white;
+    padding: 1rem 25%;
     background-color: #1c1c1c;
+}
+
+.footer-container h1{
+    font-size: 1rem;
+    font-weight: 400;
+}
+
+.footer-icons{
+    display: flex;
+}
+
+.footer-icons svg{
+    width: 1.2rem;
+    height: 1.2rem;
+    padding: 0 0.5rem;
+}
+
+.footer-icons svg path{
+    fill: white;
 }
