--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     background-color: white;
-    margin-bottom: 5rem;
+    padding-bottom: 5rem;
 }
 
 .about-info{
