--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -5,11 +5,12 @@
 }
 
 .contact-info{
-    padding-top: 3rem;
+    padding: 3rem 1rem 0 1rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 .contact-input{
@@ -23,6 +24,9 @@
 }
 
 .input-field{
+    border-radius: 0px;
+    -webkit-border-radius:0px;
+    outline: 0;
     height: 1.5rem;
     border: none;
     font-size: 1.1rem;
@@ -43,6 +47,8 @@
 }
 
 .input-message{
+    border-radius: 0px;
+    -webkit-border-radius:0px;
     font-size: 1.1rem;
     border: none;
     caret-color: red;
@@ -121,7 +127,8 @@
     .contact-cards{
         flex-direction: column;
         align-items: center;
-
+        width: 80%;
+        padding: 0 10%;
     }
         
 }
