--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -5,11 +5,27 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background: url('../images/hero-bg.jpg');
-    background-size: cover;
+    width: 100%;
     color: white;
+   
 }
 
+.parralax-img{
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+    z-index:-2;
+    object-position: center center;
+}
+
+
+.overlay{
+    position: fixed;
+    background-color: rgba(12, 12, 12, 0.8);
+    height: 100vh;
+    width: 100%;
+    z-index: -1;
+}
 .hero-content{
     position: relative;
     top: 0rem;
@@ -19,6 +35,8 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+    width: 100%;
+    height: 100%;
 }
 
 .hero-content h2{
@@ -55,13 +73,7 @@
     border-color: #FF006B;
 }
 
-.overlay{
-    position: absolute;
-    background-color: rgba(0, 0, 0, 0.7);
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-}
+
 
 .hero-icons{
     display: flex;
@@ -72,9 +84,10 @@
 }
 
 .hero-icons svg{
-    height: 2.5rem;
-    width: 2.5rem;
+    height: 2rem;
+    width: 2rem;
     padding: 0 1rem;
+    opacity: 0.9;
     --fill-color: white;
 }
 
