--- a/src/styles/skills.css
+++ b/src/styles/skills.css
@@ -1,6 +1,7 @@
 .skills-container{
     position: relative;
     display: flex;
+    padding: 0 1rem;
     flex-direction: column;
     align-items: center;
     background-color: #EDEDED;
@@ -11,12 +12,12 @@
 
 
 .skill-info{
-    padding-top: 4rem;
+    padding: 4rem 2rem 3rem 2rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-bottom: 3rem;
+    
 }
 
 
@@ -26,9 +27,7 @@
 }
 
 .swiper-pagination-bullet-active{
-
     --swiper-theme-color: #FF006B;
-    
 }
 
 .test{
