--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,6 +2,9 @@ h1{
     margin: 0;
 }
 
+body{
+    font-size:16px;
+}
 button, input[type="submit"], input[type="reset"] {
 	background: none;
 	color: inherit;
