--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -4,14 +4,14 @@
     flex-direction: column;
     align-items: center;
     background-color: white;
-    padding-bottom: 5rem;
+    padding-bottom: 3rem;
 }
 
 .about-info{
     display:flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 3rem;
+    padding-top: 2rem;
     font-size: 1.2rem;
     text-align: center;
 }
@@ -92,6 +92,7 @@
     width: 15rem;
     font-size: 1.5rem;
     font-weight: 600;
+    z-index: 1;
     transition: all 0.75s;
     text-align: center;
 }
