--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -1,22 +1,114 @@
 .blog-container{
-    width: 70vw;
-    margin: 0 10vw;
+    position: relative;
+    margin-top: 2rem;
+    margin: 2rem auto 0 auto;
+    width: clamp(40rem, 80vw,80rem);
+    color: #414141;
+}
+
+.back{
+    position: absolute;
+    left: 0.2rem;
+    font-size: 1.2rem;
+    bottom: 2rem;
+    margin: 0;
+    transition: color .5s;
+    color: #414141;
+}
+
+.back{
+    fill: #FF006B;
 }
 
 .blog-header{
+    position: relative;
     display: flex;
     flex-direction: column;
     padding: 2rem;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
+
+.topSubHead.date{
+    font-size: 1.2rem;
+}
+
+.blog-details{
+    position: relative;
+    text-align: left;
+    width: 70%;
+}
+
 .blog-content{
-    width: 40%;
-    font-size: 1.5rem;
+    position: relative;
+    display: flex;
+    justify-content: center;
 }
+
+.left-column{
+    width: 70%;
+    font-size: 1.1rem;
+}
+
 .blog-container img{
-    height: auto;
     height: 50vh;
-    width: 50vw;
+    width: 98%;
+    padding: 0 1%;
     object-position: center center;
+}
+
+.right-column{
+    margin-left: 1rem;
+    width: 30%;
+    
+}
+
+.recent-title{
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 1rem;
+    padding: 1.2rem 0;
+    border-bottom: solid #414141 1px;
+}
+
+.recent-title svg{
+    width: 1.5rem;
+    height: 1.5rem;
+    padding-right: 0.5rem;
+}
+
+.recent-title h1{
+    font-weight: 400;
+    font-size: 1.1rem;
+}
+
+@media (max-width: 768px){
+    
+    
+    .blog-content{
+        flex-direction: column;
+    }
+
+    .left-column{
+        width: 100%;
+    }
+
+    .blog-container{
+        width: 80%;
+    }
+    .blog-container img{
+        width: 100%;
+    }
+    .right-column{
+        margin-left: 0;
+        width: 100%;
+        flex-direction: column;
+    }
+
+    .recent-posts{
+        width: 100%;
+    }
 }
