--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -25,3 +25,8 @@ button, input[type="submit"], input[type="reset"] {
 .botSubHead{
     font-weight: 300;
 }
+
+a {
+    color: inherit; /* blue colors for links too */
+    text-decoration: inherit; /* no underline */
+  }
