--- a/src/styles/blogCard.css
+++ b/src/styles/blogCard.css
@@ -18,28 +18,24 @@
 }
 
 .blogCard-card img{
-    position: absolute;
-    top: 0;
+    position: relative;
     width: 100%;
-    max-height: 50%;
+    height: 30%;
 }
 
 .blogCard-card{
     position: relative;
     display: flex;
     flex-direction: column;
-    width:32rem;
-    background-color: white;
-    min-height:80vh;
-    max-height: 90vh;
-    overflow: scroll;
+    max-width:32rem;
+    overflow-x: hidden;
 }
 
 
 .blog-buttons{
-    position: absolute;
-    bottom: 0rem;
-    width: 32rem;
+    position: relative;
+    width: 100%;
+    bottom: -0.1rem;
     display: flex;
     flex-direction: row;
 }
@@ -58,27 +54,33 @@
 }
 
 .description{
-    position: absolute;
-    bottom: 3rem;
     margin: 0.5rem 0;
     padding: 0.5rem 1rem 0 1rem;
     width: calc(100%-2rem);
     --line-height : 1.2rem;
     color: #282727;
-    min-height: calc(var(--line-height) * 5);
-    height: 35vh;
-    max-height: 100vh;
+    max-height: calc(var(--line-height) * 5);
     line-height: var(--line-height);
     overflow: hidden;
   
     
 }
 
+.blogCard-card h2{
+    margin: 0;
+    color: #545454;
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+}
 .description p{
     /* width: 10rem; */
     overflow-wrap: break-word;
 }
 
+
+.blogCard-text{
+    background-color: white;
+}
 .blogCard-title{
     padding: 1rem 1rem 0 1rem;
     font-size: 1rem;
@@ -87,16 +89,7 @@
 @media (max-width: 768px) {
     .blogCard-card{
         width: 95%;
-        max-width: 32rem;
+        max-width: 95%;
+        left: 2.5%;
     }
-
-    .blog-buttons{
-        width: 100%;
-    }
-
-    .description{
-        width: 95%;
-    }
-
-    
 }
