--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -119,6 +119,20 @@
     font-size: 1.2rem;
 }
 
+.MuiPagination-root{
+    padding-bottom: 2rem;
+}
+
+.status-message{
+    position: relative;
+    top: 2rem;
+    text-align: center;
+    max-width: 60%;
+    font-size: 1.2rem;
+    padding: 1rem ;
+    margin: 0 auto;
+}
+
 @media (max-width: 768px) {
     .contact-input{
         width: 85%;
